[package]
name = "esp-iof-ota"
version = "0.1.0"
authors = ["Linus Färnstrand <faern@faern.net>"]
edition = "2021"
resolver = "2"
rust-version = "1.66"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]


[dependencies]
log = { version = "0.4.17", default-features = false }
esp-idf-sys = { version = "0.33", features = ["binstart", "native"] }
esp-idf-hal = { version = "0.41"  }
esp-idf-svc = { version = "0.46"  }
embedded-svc = { version = "0.25" }
anyhow = "1.0.75"
esp-ota = "0.2.0"
const-str = "0.5.6"

[build-dependencies]
embuild = "0.31.2"

# https://github.com/esp-rs/espflash/blob/master/cargo-espflash/README.md#package-metadata
[package.metadata.espflash]
partition_table = "partitions.csv"
